--- a/styles.scss
+++ b/styles.scss
@@ -26,6 +26,11 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd; 
+}
   
   @keyframes AnimateBG { 
     0%{background-position:0% 50%}
