--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 .bg {
     margin: auto;
     width: 100%;
-    height: 50vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
