--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 @font-face { 
   font-family: monocraft; 
-  src: url('Monocraft.TTF') format('truetype'); 
+  src: url('Monocraft.ttf') format('truetype'); 
 }
 
 .bg {
