playing with fonts

--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,10 @@
 @font-face { 
-  font-family: 'alegreya'; 
+  font-family: alegreya; 
   src: url('AlegreyaSans-Regular.ttf') format('truetype'); 
   font-style: normal;
 }
 @font-face {
-  font-family: 'exo';
+  font-family: exo;
   src: url('Exo2-VariableFont_wght.ttf') format('truetype');
 }
 
