--- a/styles.scss
+++ b/styles.scss
@@ -1,18 +1,10 @@
-@font-face { 
-  font-family: alegreya; 
-  src: url('AlegreyaSans-Regular.ttf') format('truetype'); 
-  font-style: normal;
-}
-@font-face {
-  font-family: exo;
-  src: url('Exo2-VariableFont_wght.ttf') format('truetype');
-}
 
 .bg {
-    margin: auto;
+    margin: 0;
     width: 100%;
-    height: 200%;
+    height: 100%;
     display: flex;
+    flex-grow: 1;
     align-items: center;
     justify-content: center;
     background-size: 300% 300%;
@@ -25,7 +17,6 @@
     );  
     animation: AnimateBG 20s ease infinite;
     color:beige;
-    font-family: exo;
   }
 
 .header {
@@ -33,10 +24,8 @@
     padding: 100px;
     text-align: center;
     color: white;
-    font-family: alegreya;
 }
 
-  
   @keyframes AnimateBG { 
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
