--- a/styles.scss
+++ b/styles.scss
@@ -22,7 +22,7 @@
 .header {
     width:100%;
     height: 100%;
-    padding: 100px;
+    //padding: 100px;
     text-align: center;
     color: white;
 }
