--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@
 .bg {
     margin: 0;
     width: 100%;
-    height: 400px;
+    height: 50vh;
     display: flex;
     flex-grow: 1;
     align-items: center;
