--- a/styles.scss
+++ b/styles.scss
@@ -19,7 +19,7 @@
 
 .header {
     width:100%;
-    height: 100%;
+    height: 50vh;
     //padding: 100px;
     text-align: center;
     color: white;
