--- a/styles.scss
+++ b/styles.scss
@@ -10,8 +10,8 @@
           -45deg, 
           rgba(59,173,227,1) 0%, 
           rgba(87,111,230,1) 25%, 
-          rgba(152,68,183,1) 51%, 
-          rgba(255,53,127,1) 100%
+          rgb(117, 73, 73) 51%, 
+          rgb(197, 40, 40) 100%
     );  
     animation: AnimateBG 20s ease infinite;
     color:beige;
