--- a/styles.scss
+++ b/styles.scss
@@ -8,10 +8,10 @@
     background-size: 300% 300%;
     background-image: linear-gradient(
           -45deg, 
-          rgba(59,173,227,1) 0%, 
-          rgba(87,111,230,1) 25%, 
-          rgb(117, 73, 73) 51%, 
-          rgb(197, 40, 40) 100%
+          rgba(#41e5fb) 0%, 
+          rgb(#79a5f0) 25%, 
+          rgb(#e1d0d0) 51%, 
+          rgb(#dd5a5a) 100%
     );  
     animation: AnimateBG 20s ease infinite;
     color:beige;
