--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,7 @@
 .bg {
     margin: 0;
     display: flex;
+    height: 60vh;
     flex-grow: 1;
     align-items: center;
     justify-content: center;
@@ -20,7 +21,7 @@
 .banner {
     width:100%;
     height: 250vh;
-    //padding: 100px;
+    padding: 100px;
     text-align: center;
     color: white;
 }
