--- a/styles.scss
+++ b/styles.scss
@@ -20,7 +20,7 @@
 
 .banner {
     width:100%;
-    height: 250vh;
+    //height: 250vh;
     padding: 100px;
     text-align: center;
     color: white;
