increased banner size

--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@
     flex-grow: 1;
     align-items: center;
     justify-content: center;
-    background-size: 300% 300%;
+    //background-size: 300% 300%;
     background-image: linear-gradient(
           -45deg, 
           rgba(#41e5fb) 0%, 
