--- a/styles.scss
+++ b/styles.scss
@@ -8,11 +8,11 @@
     justify-content: center;
     //background-size: 300% 300%;
     background-image: linear-gradient(
-          -45deg, 
-          rgba(#41e5fb) 0%, 
-          rgb(#79a5f0) 25%, 
-          rgb(#e1d0d0) 51%, 
-          rgb(#dd5a5a) 100%
+          -45deg,
+          #dd5a5a, 
+          #e1d0d0,
+          #79a5f0,
+          #41e5fb,
     );  
     animation: AnimateBG 20s ease infinite;
     color:beige;
