--- a/styles.scss
+++ b/styles.scss
@@ -9,10 +9,10 @@
     //background-size: 300% 300%;
     background-image: linear-gradient(
           -45deg,
-          #dd5a5a, 
-          #e1d0d0,
-          #79a5f0,
-          #41e5fb,
+          #dd5a5a 0%, 
+          #e1d0d0 25%,
+          #79a5f0 51%,
+          #41e5fb 100%,
     );  
     animation: AnimateBG 20s ease infinite;
     color:beige;
