--- a/styles.scss
+++ b/styles.scss
@@ -20,9 +20,9 @@
     text-align: center;
     color: white;
 }
-
+/*
   @keyframes AnimateBG { 
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
-  }
+  }*/
