--- a/styles.scss
+++ b/styles.scss
@@ -6,13 +6,13 @@
   flex-grow: 1;
   align-items: center;
   justify-content: center;
-  background-size: 300% 300%;
+  background-size: 400% 400%;
   background-image: linear-gradient(
     -45deg,
     rgb(221, 90, 90) 0%,
     rgb(225, 208, 208) 25%,
     rgb(121, 165, 240) 51%,
-    rgb(65, 229, 251) 100%,);  
+    rgb(65, 229, 251) 100%);  
   animation: AnimateBG 20s ease infinite;
   color: whitesmoke;
 }
