--- a/styles.scss
+++ b/styles.scss
@@ -9,21 +9,21 @@
   background-size: 400% 400%;
   background-image: linear-gradient(
     -45deg,
-    rgb(221, 90, 90) 0%,
-    rgb(225, 208, 208) 25%,
+    rgb(117, 36, 36) 0%,
+    rgb(62, 55, 55) 25%,
     rgb(121, 165, 240) 51%,
     rgb(65, 229, 251) 100%);  
   animation: AnimateBG 20s ease infinite;
   color: whitesmoke;
 }
 
-.banner {
+/*.banner {
   width:100%;
   //height: 250vh;
   padding: 100px;
   text-align: center;
   color: white;
-}
+}*/
 
 @keyframes AnimateBG { 
     0%{background-position:0% 50%}
