--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
 @font-face { 
-    font-family: alegreya; 
-    src: url('AlegreyaSans-Regular.ttf') format('truetype'); 
+    font-family: space; 
+    src: url('SpaceMono-Regular.ttf') format('truetype'); 
     font-style: normal;
-  }
-@font-face {
-    font-family: exo;
-    src: url('Exo2-VariableFont_wght.ttf') format('truetype');
 }
 
-.h1{
-    font-family: exo;
+.header{
+    font-family: space;
 }
-.p{
-    font-family: alegreya;
+
+  /* Increase the font size of the heading */
+.header h1 {
+    text-align: center;
+    font-size: 40px;
+}
+  
+.header p{
+    text-align: center;
+}
+  
+.main h1{
+    text-align: center;
+    font-family: space;
 }
