--- a/styles.scss
+++ b/styles.scss
@@ -14,7 +14,7 @@
     rgb(62, 55, 55) 51%,
     rgb(117, 36, 36) 100%);  
   animation: AnimateBG 20s ease infinite;
-  color: green;
+  color: rgb(53, 255, 53);
 }
 
 /*.banner {
