--- a/styles.scss
+++ b/styles.scss
@@ -17,16 +17,41 @@
   color: rgb(53, 255, 53);
 }
 
-/*.banner {
-  width:100%;
-  //height: 250vh;
-  padding: 100px;
-  text-align: center;
-  color: white;
-}*/
-
 @keyframes AnimateBG { 
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
+}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.box {
+  padding: 0 50px 0 10px;
+  border: 2px solid #656464;
+  border-radius: 10px;
+}
+
+.box p {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+}
+
+.box p::after {
+  content: "";
+  width: 5px;
+  height: 20px;
+  background: whitesmoke;
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
 }
