--- a/styles.scss
+++ b/styles.scss
@@ -26,19 +26,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 20px;
 }
 
 .box {
-  padding: 0 50px 0 10px;
-  border: 2px solid #656464;
-  border-radius: 10px;
+  padding: 0 10px 0 10px;
 }
 
 .box p {
   display: flex;
   align-items: center;
   gap: 2px;
+  font-family: space;
 }
 
 @keyframes cursor-blink {
